# plutocracy

./: AUTHORS  Buildings.md  ChangeLog  CodeStyle.md  GameDesign.md  IssueTracker.md  Links.md  Makefile  Makefile.am  Makefile.in  ModelNameList.md  OBSOLETE_REPO_USE_GIT  OldUserInterface.md  ProjectHome.md  README  Resources.md  Roadmap.md  RoughPlanning.md  SConstruct  Ships.md  SphereSubdivision.md  Tutorials.md  UserInterface.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  genlang.py  todo.sh
blender/: cube_sphere.blend  export_plum.py  granger.blend
config/: client.cfg  default.cfg
gendoc/: Makefile  README  gendoc.c  gendoc.h  gendoc_entry.c  gendoc_parse.c  header.txt
gendoc/docs/: game.html  gendoc.css  gendoc.html  interface.html  network.html  render.html  shared.html
gendoc/test/: test.c  test.h
gui/themes/default/: theme.cfg
gui/themes/test/: theme.cfg
lang/: fr
m4/: ChangeLog
models/environment/: randlit-rock.plum  tree-deciduous.plum
models/gib/: crates.plum
models/ships/: ship-sloop.plum
models/test/: cube.plum  cube_sphere.plum  granger.plum  tree3.plum
po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  plutocracy.pot
scripts/: master.py
src/: client.c  common.c  common.h  plutocracy.c  server.c
src/common/: c_array.c  c_file.c  c_glibc_rand.c  c_log.c  c_malloc.c  c_math.c  c_memory.c  c_noise.c  c_os_posix.c  c_os_windows.c  c_pts.h  c_rand.c  c_shared.h  c_string.c  c_time.c  c_variables.c  c_vectors.h
src/game/: g_client.c  g_combat.c  g_commands.c  g_common.h  g_elements.c  g_globe.c  g_host.c  g_movement.c  g_names.c  g_shared.h  g_ship.c  g_sphere.c  g_sync.c  g_tile.c  g_trade.c  g_variables.c
src/interface/: i_button.c  i_chat.c  i_common.h  i_console.c  i_container.c  i_entry.c  i_game.c  i_globe.c  i_hover.c  i_label.c  i_layout.c  i_nations.c  i_players.c  i_quick_info.c  i_ring.c  i_select.c  i_shared.h  i_ship.c  i_static.c  i_trade.c  i_variables.c  i_video.c  i_widget.c  i_widgets.c  i_window.c
src/network/: n_client.c  n_common.h  n_http.c  n_server.c  n_shared.h  n_socket.c  n_sync.c  n_variables.c
src/platform/: p_win32.c
src/render/: r_assets.c  r_camera.c  r_common.h  r_globe.c  r_mode.c  r_model.c  r_prerender.c  r_render.c  r_shared.h  r_ship.c  r_solar.c  r_sprite.c  r_static_mesh.c  r_surface.c  r_terrain.c  r_test.c  r_variables.c  r_window.c
vc8/: config.h  plutocracy.sln  plutocracy.vcproj
windows/include/: config.h
windows/vc8/: plutocracy.sln  plutocracy.vcproj
